XMLExper/m12/m12_51_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:750:108: error: lvalue required as left operand of assignment
  750 |         /*PCI*/dynamic_cast<tinyxml2::XMLText*>(returnNode) = CreateUnlinkedNode<XMLComment>( _commentPool );
      |                                                                                                            ^
diff: tinyxml2.S: No such file or directory
